--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "eject": "expo eject"
   },
   "dependencies": {
-    "expo": "~40.0.0",
+    "axios": "^0.21.1",
+    "expo": "^40.0.1",
+    "expo-location": "~10.0.0",
     "expo-status-bar": "~1.0.3",
     "react": "16.13.1",
     "react-dom": "16.13.1",
